# NekiraPhysicsEngine

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CONTRIBUTING.MD  README.MD  vcpkg.json
.github/workflows/: CodeQL.yml
Engine/: CMakeLists.txt  Engine.MD
Engine/BaseEngine/: BaseEngine.MD  CMakeLists.txt
Engine/BaseEngine/Core/: CMakeLists.txt
Engine/BaseEngine/Core/Private/: Core.cpp
Engine/BaseEngine/Core/Private/Tick/: TickInterface.cpp  TickSystem.cpp
Engine/BaseEngine/Core/Public/: Core.hpp
Engine/BaseEngine/Core/Public/CoreObject/: CoreObject.hpp
Engine/BaseEngine/Core/Public/Delegate/: Delegate.hpp
Engine/BaseEngine/Core/Public/Tick/: TickGroup.hpp  TickInterface.hpp  TickSystem.hpp
Engine/BaseEngine/CoreBase/: CMakeLists.txt  CoreBase.MD
Engine/BaseEngine/CoreBase/Public/: CoreBase.hpp  CoreMacros.hpp
Engine/BaseEngine/CoreMacros/: CoreMacros.MD
Engine/BaseEngine/CoreMacros/Public/: CoreMacros.hpp
Engine/BaseEngine/Math/: CMakeLists.txt  Math.MD
Engine/BaseEngine/Math/Private/: Math.cpp  Utilities.cpp
Engine/BaseEngine/Math/Private/MathUtility/: MathUtilities.cpp
Engine/BaseEngine/Math/Private/Utility/: MathUtilities.cpp  Utilities.cpp
Engine/BaseEngine/Math/Public/: Math.hpp  Utilities.hpp  Vectors.hpp
Engine/BaseEngine/Math/Public/MathUtility/: MathUtilities.hpp  MatrixUtilities.hpp
Engine/BaseEngine/Math/Public/Matrices/: Matrices.hpp  Matrix4.hpp  SquareMatrix.hpp
Engine/BaseEngine/Math/Public/Matrices/Internal/: Matrix2.hpp  Matrix3.hpp  Matrix4.hpp  MatrixBase.hpp  SquareMatrix.hpp
Engine/BaseEngine/Math/Public/Ranges/: Ranges.hpp
Engine/BaseEngine/Math/Public/Ranges/Internal/: RangeBase.hpp
Engine/BaseEngine/Math/Public/Rotations/: Rotations.hpp
Engine/BaseEngine/Math/Public/Rotations/Internal/: Quaternion.hpp  RotationBase.hpp  Rotator.hpp
Engine/BaseEngine/Math/Public/Transforms/: Transforms.hpp
Engine/BaseEngine/Math/Public/Transforms/Internal/: Transform2D.hpp  Transform3D.hpp  TransformBase.hpp
Engine/BaseEngine/Math/Public/Utility/: MathUtilities.hpp  MatrixUtilities.hpp  Utilities.hpp  VectorUtilities.hpp
Engine/BaseEngine/Math/Public/Vectors/: Vector2.hpp  Vector3.hpp  Vector4.hpp  Vectors.hpp
Engine/BaseEngine/Math/Public/Vectors/Internal/: Vector2.hpp  Vector3.hpp  Vector4.hpp  VectorBase.hpp
Engine/Core/: CMakeLists.txt  Core.MD
Engine/Core/Private/: Core.cpp
Engine/CoreMacros/: CMakeLists.txt
Engine/CoreMacros/Public/: CoreMacros.hpp
Engine/Math/: CMakeLists.txt  Math.MD
Engine/Math/Private/: Math.cpp
Engine/Math/Public/: Math.hpp
Engine/PhysicsEngine/: CMakeLists.txt  PhysicsEngine.MD
Engine/PhysicsEngine/Physics2D/: CMakeLists.txt
Engine/PhysicsEngine/Physics2D/Private/BoundingVolume2D/: BoundingAABB2D.cpp  BoundingCircle2D.cpp  BoundingOBB2D.cpp  BoundingSphere2D.cpp  BoundingVolume2D.cpp
Engine/PhysicsEngine/Physics2D/Private/Collider2D/: Collider2D.cpp
Engine/PhysicsEngine/Physics2D/Private/ForceGenerator2D/: GravityGenerator2D.cpp
Engine/PhysicsEngine/Physics2D/Private/Geometry2D/: Circle2D.cpp  Line2D.cpp  Point2D.cpp  Rectangle2D.cpp
Engine/PhysicsEngine/Physics2D/Private/PhyscisObject2D/: PhysicsObject2D.cpp
Engine/PhysicsEngine/Physics2D/Private/Physics2DUtility/: Physics2DUtilities.cpp
Engine/PhysicsEngine/Physics2D/Private/PhysicsWorld2D/: PhysicsWorld2D.cpp
Engine/PhysicsEngine/Physics2D/Private/Rigid2D/BoundingVolume2D/: BoundingAABB2D.cpp  BoundingCircle2D.cpp  BoundingOBB2D.cpp  BoundingVolume2D.cpp
Engine/PhysicsEngine/Physics2D/Private/Rigid2D/Collider2D/: Collider2D.cpp
Engine/PhysicsEngine/Physics2D/Private/Rigid2D/Geometry2D/: Circle2D.cpp  Line2D.cpp  Point2D.cpp  Rectangle2D.cpp
Engine/PhysicsEngine/Physics2D/Private/Rigid2D/RigidBody2D/: RigidBody2D.cpp  RigidBodyComponent2D.cpp
Engine/PhysicsEngine/Physics2D/Public/: Physics2D.hpp
Engine/PhysicsEngine/Physics2D/Public/BoundingVolume2D/: BoundingAABB2D.hpp  BoundingCircle2D.hpp  BoundingOBB2D.hpp  BoundingSphere2D.hpp  BoundingVolume2D.hpp
Engine/PhysicsEngine/Physics2D/Public/Collider2D/: Collider2D.hpp
Engine/PhysicsEngine/Physics2D/Public/ForceGenerator2D/: ForceGenerator2D.hpp  GravityGenerator2D.hpp
Engine/PhysicsEngine/Physics2D/Public/Geometry2D/: Circle2D.hpp  Line2D.hpp  Point2D.hpp  PrimitiveShape2D.hpp  Rectangle2D.hpp
Engine/PhysicsEngine/Physics2D/Public/Physics2DUtility/: Physics2DUtilities.hpp
Engine/PhysicsEngine/Physics2D/Public/PhysicsObject2D/: PhysicsObject2D.hpp
Engine/PhysicsEngine/Physics2D/Public/PhysicsWorld2D/: PhysicsWorld2D.hpp
Engine/PhysicsEngine/Physics2D/Public/Rigid2D/BoundingVolume2D/: BoundingAABB2D.hpp  BoundingCircle2D.hpp  BoundingOBB2D.hpp  BoundingVolume2D.hpp
Engine/PhysicsEngine/Physics2D/Public/Rigid2D/Collider2D/: Collider2D.hpp
Engine/PhysicsEngine/Physics2D/Public/Rigid2D/Geometry2D/: Circle2D.hpp  Line2D.hpp  Point2D.hpp  PrimitiveShape2D.hpp  Rectangle2D.hpp
Engine/PhysicsEngine/Physics2D/Public/Rigid2D/RigidBody2D/: RigidBody2D.hpp  RigidBodyComponent2D.hpp
Engine/PhysicsEngine/Physics2D/Public/RigidBody2D/: RigidBody2D.hpp
Engine/PhysicsEngine/PhysicsBase/: CMakeLists.txt
Engine/PhysicsEngine/PhysicsBase/Private/: PhysicsBase.cpp
Engine/PhysicsEngine/PhysicsBase/Private/PhysicsObject/: PhysicsObject.cpp
Engine/PhysicsEngine/PhysicsBase/Public/: PhysicsBase.hpp  RigidBodyType.hpp
Engine/PhysicsEngine/PhysicsBase/Public/PhysicsObject/: PhysicsObject.hpp  PhysicsObjectType.hpp
Main/: CMakeLists.txt  Main.MD  NekiraPhysics2D.cpp  NekiraPhysics3D.cpp
